<resources>
    <string name="app_name">AvtoPark</string>
    <string name="email">Введите E-mail</string>
    <string name="login">Введите логин</string>
    <string name="password">Введите пароль</string>
    <string name="mode">Выберите режим работы</string>
    <string-array name="spinner_mode">
        <item>Диспетчер</item>
        <item>Водитель</item>
        <item>Пассажир</item>
    </string-array>
    <string name="entry">Войти</string>
    <string name="hint">Введите маршрут</string>
    <string name="search">Поиск</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pas">Все маршруты</string>
</resources>