<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/back"
    android:orientation="vertical">
  <EditText
      android:layout_marginTop="40dp"
      android:layout_marginLeft="80dp"
      android:id="@+id/login"
      android:layout_width="250dp"
      android:layout_height="40dp"
      android:hint="@string/login"
      android:textColorHint="@color/text"
      tools:ignore="MissingConstraints,TouchTargetSizeCheck"
      tools:layout_editor_absoluteX="80dp"
      tools:layout_editor_absoluteY="51dp" />

  <EditText
      android:layout_marginTop="30dp"
      android:layout_marginLeft="80dp"
      android:id="@+id/email"
      android:layout_width="250dp"
      android:layout_height="40dp"
      android:hint="@string/email"
      android:textColorHint="@color/text"
      tools:ignore="MissingConstraints,TouchTargetSizeCheck"
      tools:layout_editor_absoluteX="80dp"
      tools:layout_editor_absoluteY="51dp" />

  <EditText
      android:layout_marginTop="30dp"
      android:layout_marginLeft="80dp"
      android:id="@+id/password"
      android:layout_width="250dp"
      android:layout_height="40dp"
      android:hint="@string/password"
      android:textColorHint="@color/text"
      tools:ignore="MissingConstraints"
      tools:layout_editor_absoluteX="80dp"
      tools:layout_editor_absoluteY="115dp" />
  <TextView
      android:layout_marginLeft="80dp"
      android:layout_marginTop="25dp"
      android:layout_width="250dp"
      android:layout_height="22dp"
      android:text="@string/mode"
      android:textColor="@color/text"
      android:textSize="17dp"></TextView>
  <Spinner
      android:layout_marginTop="5dp"
      android:layout_marginLeft="80dp"
      android:id="@+id/spinner"
      android:layout_width="250dp"
      android:layout_height="40dp"
      tools:ignore="MissingConstraints"
      tools:layout_editor_absoluteX="80dp"
      tools:layout_editor_absoluteY="183dp"
      android:entries="@array/spinner_mode"/>

  <Button
      android:id="@+id/entry"
      android:layout_marginTop="30dp"
      android:layout_marginLeft="30dp"
      android:layout_width="350dp"
      android:layout_height="50dp"
      android:background="@drawable/button"
      android:text="@string/entry"
      android:textColor="@color/back"
      tools:ignore="MissingConstraints"
      tools:layout_editor_absoluteX="30dp"
      tools:layout_editor_absoluteY="257dp" />

  <ImageView
      android:layout_marginTop="30dp"
      android:layout_marginLeft="60dp"
      android:layout_width="300dp"
      android:layout_height="300dp"
      android:background="@drawable/img"
      tools:ignore="MissingConstraints"
      tools:layout_editor_absoluteX="55dp"
      tools:layout_editor_absoluteY="350dp" />
</LinearLayout>